https://github.com/VRL-Studio/VRL-Studio/issues/48 https://github.com/VRL-Studio/VRL/issues/80
windows run scripts adjusted (works with 3d)